Correct z-index in tooltip-style

--- a/editor/src/main/resources/io/dahuapp/editor/app/dahuapp.css
+++ b/editor/src/main/resources/io/dahuapp/editor/app/dahuapp.css
@@ -236,7 +236,7 @@
 
 #edit-tooltip-popup {
     position: relative;
-    z-index: 10;
+    z-index: 12;
     width: 500px;
     height: 420px;
     background: white;
